crates/icydb-core/tests/ui/db/trace_module_absent.rs
use icydb_core::db::trace::ExecutionTrace;

fn main() {}
